fix: deprecated URL warning